# futuramaapi

./: .coveragerc  .env.template  .env.test  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE.md  Makefile  README.md  alembic.ini  babel.cfg  docker-compose.yml  docker-entrypoint.sh  heroku.yml  install-dependencies.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  robots.txt
.github/workflows/: deploy.yml  python-app.yml  test.yml
alembic/: env.py
alembic/versions/: 1353be8a56b8_initial_project_structure.py  1b86ee33d1ba_add_broadcast_number_to_episode.py  928d4358646c_add_image_field.py  c03e060df1b8_add_production_code_to_episode.py  d413d1284339_initial_revision.py  ee5656c8dc7f_define_user_model.py
app/: configs.py  main.py  templates.py
app/core/: __init__.py  settings.py
app/core/tests/: test_settings.py
app/graph_ql/: routers.py  schemas.py
app/graph_ql/tests/: test_schemas.py
app/graphql/: routers.py  schemas.py
app/middlewares/: secure.py
app/repositories/: base.py  models.py  sessions.py
app/repositories/tests/: test_base.py  test_models.py
app/routers/: callbacks.py  characters.py  episodes.py  notifications.py  root.py  seasons.py  tokens.py  users.py
app/services/: auth.py  base.py  callbacks.py  characters.py  emails.py  episodes.py  hashers.py  notifications.py  root.py  seasons.py  security.py  tokens.py  users.py
app/tests/: test_configs.py
configs/plugins/: env_vars.py
futuramaapi/: __init__.py  __main__.py  __version__.py  builder.py  main.py
futuramaapi/api_clients/: __init__.py  _base.py  _httpx.py
futuramaapi/apps/: __init__.py  _base.py  app.py  fastapi.py  hypercorn.py
futuramaapi/core/: __init__.py  _settings.py  configs.py
futuramaapi/db/: __init__.py  _base.py  models.py  session.py
futuramaapi/db/migrations/: env.py  script.py.mako
futuramaapi/db/migrations/versions/: 1b86ee33d1ba_add_broadcast_number_to_episode.py  81f374066bbf_add_auth_session.py  8e79c0472843_add_favorite_character_model.py  c03e060df1b8_add_production_code_to_episode.py  d413d1284339_initial_revision.py
futuramaapi/helpers/: __init__.py  _markdown.py  hashers.py  pydantic.py  templates.py
futuramaapi/middlewares/: cors.py  counter.py  secure.py
futuramaapi/mixins/: pydantic.py
futuramaapi/pydantic/: __init__.py  _base.py
futuramaapi/repositories/: __init__.py  _base.py  base.py  models.py  session.py
futuramaapi/repositories/migrations/: env.py
futuramaapi/repositories/migrations/versions/: 1353be8a56b8_initial_project_structure.py  2693764b6723_add_secret_message_model.py  4d5b68e5d9df_add_links_model.py  81f374066bbf_add_auth_session.py  928d4358646c_add_image_field.py  ca664de1bf44_add_system_message.py  d7ce6e6090f5_add_requests_counter.py  ee5656c8dc7f_define_user_model.py
futuramaapi/routers/: __init__.py  _redirects.py  exceptions.py  health.py
futuramaapi/routers/callbacks/: api.py  schemas.py
futuramaapi/routers/characters/: api.py  schemas.py
futuramaapi/routers/crypto/: api.py  schemas.py
futuramaapi/routers/episodes/: api.py  schemas.py
futuramaapi/routers/graphql/: api.py  context.py  conversion.py  dependencies.py  mixins.py  schemas.py  validators.py
futuramaapi/routers/notifications/: api.py  schemas.py
futuramaapi/routers/randoms/: api.py
futuramaapi/routers/rest/callbacks/: api.py  schemas.py
futuramaapi/routers/rest/characters/: api.py
futuramaapi/routers/rest/crypto/: api.py
futuramaapi/routers/rest/episodes/: api.py  schemas.py
futuramaapi/routers/rest/favorites/: api.py
futuramaapi/routers/rest/links/: api.py
futuramaapi/routers/rest/notifications/: api.py  schemas.py
futuramaapi/routers/rest/randoms/: api.py
futuramaapi/routers/rest/root/: api.py  schemas.py
futuramaapi/routers/rest/seasons/: api.py  schemas.py
futuramaapi/routers/rest/tokens/: api.py  dependencies.py  schemas.py
futuramaapi/routers/rest/users/: __init__.py  api.py  dependencies.py  schemas.py
futuramaapi/routers/rest/users_new/: api.py
futuramaapi/routers/root/: api.py  schemas.py
futuramaapi/routers/seasons/: api.py  schemas.py
futuramaapi/routers/services/: __init__.py  _base.py  _base_template.py
futuramaapi/routers/services/about/: get_about.py
futuramaapi/routers/services/auth/: auth_cookie_session_user.py  get_user_auth.py  get_user_signup.py  logout_cookie_session_user.py  signup_cookie_session_user.py
futuramaapi/routers/services/callbacks/: __init__.py  _base.py  get_character.py  get_episode.py  get_season.py
futuramaapi/routers/services/changelog/: get_changelog.py
futuramaapi/routers/services/characters/: get_character.py  list_characters.py
futuramaapi/routers/services/crypto/: create_secret_message.py  get_secret_message.py
futuramaapi/routers/tokens/: api.py  dependencies.py  schemas.py
futuramaapi/routers/users/: api.py  dependencies.py  schemas.py
futuramaapi/routers/views/: __init__.py  api.py
futuramaapi/security/: __init__.py  oauth2.py
futuramaapi/tasks/: _base.py
futuramaapi/tasks/callbacks/: __init__.py  _base.py  get_character.py  get_episode.py  get_season.py
futuramaapi/utils/: __init__.py  _compat.py  helpers.py
futuramaapi/web_servers/: __init__.py  hypercorn.py
futuramaapi/workers/: __init__.py  __main__.py
futuramaapi/workers/_dramatiq/: __init__.py  _config.py  _runner.py
futuramaapi/workers/services/: __init__.py  _base.py
futuramaapi/workers/tasks/: _base.py
locale/en_US/LC_MESSAGES/: messages.po
static/css/: about.css  auth.css  base.css  cookie-banner.css  index.css
static/js/: auth.js  cookie-banner.js  index.js  password-change.js
templates/: about.html  auth.html  base.html  changelog.html  index.html  password_change.html  signup.html
templates/emails/: confirmation.html  password_reset.html
tests/: conftest.py
tests/features/: entities.feature
tests/functional/: test_entities.py
tests/helpers/enteties/: __init__.py  _base.py  characters.py  episodes.py  seasons.py
tests/plugins/: env_vars.py
tests/unit/helpers/: test_hashers.py
(+49 files in other folders)
