[tool.poetry]
name = "futuramaapi"
version = "1.0.8"
description = "Inspired REST and GraphQL API based on TV show Futurama"
authors = ["Ivan Koldakov <coldie322@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
hypercorn = {extras = ["uvloop"], version = "^0.16.0"}
sqlalchemy = "^2.0.29"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.7.1"}
fastapi-storages = "^0.3.0"
asyncpg = "^0.29.0"
pillow = "^10.3.0"
fastapi-pagination = "^0.12.24"
anyio = "^4.3.0"
sse-starlette = "^2.1.0"
pydash = "^8.0.1"
pyjwt = "^2.8.0"
fastapi-mail = {extras = ["httpx"], version = "^1.4.1"}
strawberry-graphql = "^0.230.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    ".venv",
    "venv",
]

fix = true
show-fixes = true
output-format = "full"

line-length = 120
indent-width = 4

# Assume Python 3.8
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "E",
    "F",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "S",
    "BLE",
    "B",
    "A",
    "C4",
    "DJ",
    "PL",
    "TCH",
    "RUF",
    "TID",
]
ignore = [
    "N818",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
# docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
# docstring-code-line-length = "dynamic"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.extend-per-file-ignores]
"test_*.py" = [
    "S101",
]

[tool.mypy]
python_version = "3.12"
follow_imports = "skip"
ignore_missing_imports = true
check_untyped_defs = true
files = [
    "futuramaapi",
    "tests",
]
